# jpeg-decoder

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: rust.yml
benches/: decoding_benchmark.rs  large_image.rs
examples/: decode.rs
fuzz/: Cargo.toml  Readme.md
fuzz-afl/: .gitignore  Cargo.toml  README.md
fuzz-afl/src/: fuzz_decode.rs  fuzz_info.rs  reproduce_decode.rs  reproduce_info.rs  utils.rs
fuzz/fuzz_targets/: fail_tmin.rs  regression.rs
src/: color.rs  decoder.rs  error.rs  huffman.rs  idct.rs  lib.rs  marker.rs  parser.rs  reader.rs  resampler.rs  upsampler.rs  worker_thread.rs
src/arch/: mod.rs  neon.rs  ssse3.rs  wasm.rs
src/decoder/: lossless.rs
src/worker/: immediate.rs  mod.rs  multithreaded.rs  rayon.rs  threaded.rs
tests/: crashtest.rs  lib.rs  rayon-0.rs  rayon-1.rs  rayon-2.rs  rayon.rs  reftest.rs
tests/common/: mod.rs
tests/crashtest/: mod.rs
tests/crashtest/images/: README.md
tests/no_std/: jpg-size-8x8.raw  mod.rs
tests/reftest/: README.md  mod.rs
tests/reftest/images/: README.md  disabled.list
tests/reftest/images/lossless/: LICENSE  README.md
tests/reftest/images/lossless/1/: README.md
tests/reftest/images/lossless/2/: README.md
