[package]
name = "jpeg-decoder"
version = "0.2.2"
authors = ["The image-rs Developers"]
description = "JPEG decoder"
documentation = "https://docs.rs/jpeg-decoder"
repository = "https://github.com/image-rs/jpeg-decoder"
readme = "README.md"
keywords = ["jpeg", "jpg", "decoder", "image"]
license = "MIT / Apache-2.0"
exclude = ["tests/*"]
edition = "2018"

[dependencies]
rayon = { version = "1.1.0", optional = true }

[dev-dependencies]
png = "0.16"
walkdir = "2.0"
criterion = "0.3"

[features]
default = ["rayon"]
platform_independent = []
nightly_aarch64_neon = []

## Internal development configuration: testing and benchmarking

[[bench]]
name = "decoding_benchmark"
harness = false

[[bench]]
name = "large_image"
harness = false

[[test]]
name = "rayon"
required-features = ["rayon"]

[[test]]
name = "rayon-0"
required-features = ["rayon"]

[[test]]
name = "rayon-1"
required-features = ["rayon"]

[[test]]
name = "rayon-2"
required-features = ["rayon"]
